# em-bright-seiyat

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  README.md  pyproject.toml
doc/: compute_disk_mass.rst  conf.py  em_bright.rst  index.rst
etc/: conf.ini
ligo/em_bright/: __init__.py  categorize.py  computeDiskMass.py  dag_writer.py  em_bright.py  utils.py
ligo/em_bright/data/: APR4_EPP.pickle  BHF_BBB2.pickle  Bu2019inc_lbol.pkl  Bu2019inc_mag.pkl  EOS_BAYES_FACTOR_MAP.json  EOS_MAX_MASS_MAP.json  EOS_POSTERIOR_DRAWS.h5  H4.pickle  HQC18.pickle  KDE0V.pickle  KDE0V1.pickle  LCEHL_EOS_posterior_samples_PSR+GW_slice.h5  MASS_GAP.pickle  MPA1.pickle  MS1B_PP.pickle  MS1_PP.pickle  RS.pickle  SK255.pickle  SK272.pickle  SKI2.pickle  SKI3.pickle  SKI4.pickle  SKI5.pickle  SKI6.pickle  SKMP.pickle  SKOP.pickle  SLY2.pickle  SLY230A.pickle  SLY9.pickle  SLy.pickle  __init__.py
ligo/em_bright/gwlc/: gwlc_functions.py  gwlc_utils.py  lightcurves.py
ligo/em_bright/lightcurves/: KN_lc.py  PE_vs_inj.py  PP_plot.py  calc_lightcurves.py  farah_thetas.txt  lc_heat_map_event.py  lc_heat_map_inj.py  lightcurve_utils.py  mass_distributions.py  run_PE_lc_updated.py  run_Sly_on_inj.py  run_all_PE_lc.py  scatter_mags2.py  violin_plot.py
ligo/em_bright/tests/: test_em_bright.py  test_gwlc.py
ligo/em_bright/tests/data/: 10_EOS_unit_test.h5  test_categorize_data.tbl
